--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "5.2.0"
+    "node": ">=0.10.0"
   },
-  "main": "app.js",
+  "main": "server/app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Liang <michaelpliang@gmail.com>",
@@ -27,5 +27,25 @@
     "mongoose": "^4.4.2",
     "morgan": "^1.6.1",
     "request": "^2.69.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-ignore": "^2.0.1",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-ngmin": "^0.3.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.2",
+    "gulp-util": "^3.0.7"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
